# spec

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  _config.yml  architecture.md  ask.md  data-management.md  drift-log.md  faq.md  for-archivists.html  for-developers.html  for-institutions.md  governance.md  index.md  profiles.md  proof.md  related-implementations.md  stats.md  version.json
_help/: build-a-conformant-server.md  conformance-and-profiles.md  creating-data.md  entities-and-relations.md  exporting-and-harvesting.md  faq.md  for-institutions.md  glossary.md  modelling-with-the-wizard.md  quick-tour.md  sparql.md  the-clients.md  the-modelling-wizard.md  using-the-api.md  vocabularies-and-namespaces.md  what-is-openric.md  what-is-ric.md
_layouts/: default.html  help.html
audit/: index.md  ric-o-1.1-audit.md
conformance/: README.md  probe.sh
demo/: index.md
fixtures/: README.md  manifest.json
guides/: api.md  capture.md  getting-started.md  index.md  triplestore-choice.md  viewer.md
help/: index.html  profiles-tree.html  profiles-tree.md  search-index.json  search.html  system-map.html  system-map.md
schemas/: activity.schema.json  agent.schema.json  autocomplete.schema.json  dataset.schema.json  entity-info.schema.json  entity-write.schema.json  error.schema.json  ground.schema.json  hierarchy.schema.json  (+7 more)
validator/: README.md  pyproject.toml
validator/openric_validate/: __init__.py  __main__.py  cli.py  graph_check.py  http_client.py  report.py  schema_check.py  shape_check.py
validator/tests/: test_basic.py  test_fixtures.py
(+128 files in other folders)
