[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openric-validate"
version = "0.1.0"
description = "Conformance validator for the OpenRiC specification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Johan Pieterse", email = "johan@theahg.co.za" },
    { name = "The OpenRiC contributors" },
]
keywords = ["openric", "rico", "rdf", "jsonld", "shacl", "archives", "records-in-contexts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "jsonschema>=4.18",
    "pyshacl>=0.25",
    "rdflib>=7.0",
    "requests>=2.31",
    "deepdiff>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[project.scripts]
openric-validate = "openric_validate.cli:main"

[project.urls]
Homepage = "https://openric.org"
Repository = "https://github.com/ArchiveHeritageGroup/openric-spec"
Issues = "https://github.com/ArchiveHeritageGroup/openric-spec/issues"

[tool.setuptools.packages.find]
include = ["openric_validate*"]

[tool.ruff]
line-length = 100
target-version = "py311"
